--- a/index.html
+++ b/index.html
@@ -169,61 +169,35 @@ $(document).ready(function(){
   console.log("button value: " + gemsValue.gems);
 });
 
- 
-
-
-
 
   // We begin by expanding our array to include four options.
 
-
   // Next we create a for loop to create crystals for every numberOption.
 
-    // For each iteration, we will create an imageCrystal
-
-
-
+    // For each iteration, we will create an imageCrystaz
 
     // First each crystal will be given the class ".crystal-image".
     // This will allow the CSS to take effect.
 
-
-
-
     // Each imageCrystal will be given a src link to the crystal image
-
 
     // Each imageCrystal will be given a data attribute called data-crystalValue.
     // This data attribute will be set equal to the array value.
 
-
     // Lastly, each crystal image (with all it classes and attributes) will get added to the page.
 
-
-
-
   // This time, our click event applies to every single crystal on the page. Not just one.
-
-
-
 
     // Determining the crystal's value requires us to extract the value from the data attribute.
     // Using the $(this) keyword specifies that we should be extracting the crystal value of the clicked crystal.
 
-
     // Using the .attr("data-crystalvalue") allows us to grab the value out of the "data-crystalvalue" attribute.
     // Since attributes on HTML elements are strings, we must convert it to an integer before adding to the counter
-
-
-
 
     // We then add the crystalValue to the user's "counter" which is a global variable.
     // Every click, from every crystal adds to the global counter.
 
-
-
     // All of the same game win-lose logic applies. So the rest remains unchanged.
-
 
   </script>
 </body>
